package com.skhatoll.backend.dto.partida;

public record RolCambiadoDto(
    String tipo,
    String nombreJugador,
    String nombreRol,
    String bando
) {}
