@startuml

title __PARTIDA's Class Diagram__\n

  namespace com.skhatoll.backend {
    namespace dto.partida {
      class com.skhatoll.backend.dto.partida.AbrirVotacionRequest {
          + AbrirVotacionRequest()
          + tipo()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace dto.partida {
      class com.skhatoll.backend.dto.partida.EstadoPartidaDto {
          - estadoDia : String
          - jugadores : List<JugadorDto>
          - nombreAlcalde : String
          - rondaActual : Integer
          + EstadoPartidaDto()
          + equals()
          + getEstadoDia()
          + getJugadores()
          + getNombreAlcalde()
          + getRondaActual()
          + getSesionActiva()
          + hashCode()
          + setEstadoDia()
          + setJugadores()
          + setNombreAlcalde()
          + setRondaActual()
          + setSesionActiva()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace dto.partida {
      class com.skhatoll.backend.dto.partida.FinPartidaDto {
          - bandoGanador : String
          - mensaje : String
          + FinPartidaDto()
          + bandoGanador()
          + mensaje()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace dto.partida {
      class com.skhatoll.backend.dto.partida.HabilidadRequest {
          - nombreHabilidad : String
          - objetivos : List<Integer>
          + HabilidadRequest()
          + nombreHabilidad()
          + objetivos()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace dto.partida {
      class com.skhatoll.backend.dto.partida.HabilidadResultadoDto {
          - detalle : Object
          - nombreHabilidad : String
          - objetivos : List<String>
          - resultado : String
          + HabilidadResultadoDto()
          + detalle()
          + nombreHabilidad()
          + objetivos()
          + resultado()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace dto.partida {
      class com.skhatoll.backend.dto.partida.MuerteConfirmadaDto {
          {static} + TIPO_CONFIRMAR : String
          {static} + TIPO_LINCHAMIENTO : String
          {static} + TIPO_MUERTE : String
          {static} + TIPO_RENDIRSE : String
          {static} + TIPO_REVIVIR : String
          - bando : String
          - muerteConfirmada : boolean
          - nombreJugador : String
          - nombreRol : String
          - tipo : String
          + MuerteConfirmadaDto()
          + bando()
          + muerteConfirmada()
          + nombreJugador()
          + nombreRol()
          + tipo()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace dto.partida {
      class com.skhatoll.backend.dto.partida.ResultadoVotacionDto {
          - empate : boolean
          - idSesion : Integer
          - nombreEliminado : String
          - nombreGanador : String
          - tipo : String
          + ResultadoVotacionDto()
          + empate()
          + idSesion()
          + nombreEliminado()
          + nombreGanador()
          + tipo()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace dto.partida {
      class com.skhatoll.backend.dto.partida.RolCambiadoDto {
          - bando : String
          - nombreJugador : String
          - nombreRol : String
          - tipo : String
          + RolCambiadoDto()
          + bando()
          + nombreJugador()
          + nombreRol()
          + tipo()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace dto.partida {
      class com.skhatoll.backend.dto.partida.SesionActivaDto {
          - fechaInicio : LocalDateTime
          - idSesion : Integer
          - ronda : Integer
          - tipo : String
          + SesionActivaDto()
          + fechaInicio()
          + idSesion()
          + ronda()
          + tipo()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace dto.partida {
      class com.skhatoll.backend.dto.partida.VotarRequest {
          - idObjetivo : Integer
          + VotarRequest()
          + idObjetivo()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace dto.partida {
      class com.skhatoll.backend.dto.partida.VotoDto {
          - nombreObjetivo : String
          - nombreVotante : String
          + VotoDto()
          + nombreObjetivo()
          + nombreVotante()
      }
    }
  }
  

  com.skhatoll.backend.dto.partida.AbrirVotacionRequest o-- com.skhatoll.backend.entities.SesionVotacion.TipoVotacion : tipo
  com.skhatoll.backend.dto.partida.EstadoPartidaDto o-- com.skhatoll.backend.dto.partida.SesionActivaDto : sesionActiva


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
